force-app/main/default/objects/Strategic_Account__c/Strategic_Account__c.object-meta.xml
<CustomObject>
    <label>Strategic Account</label>
    <nameField>
        <displayFormat>STR-ACC-{0000000}</displayFormat>
        <label>Strategic Relationship</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Strategic Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>