force-app/main/default/objects/Strategic_Account__c/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>INT Opportunity that&apos;s associated with this Strategic Account.

-- Created as part of CR00032353 | 00994426</description>
    <label>Opportunity Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>INT Sales</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Strategic Relationship</relationshipLabel>
    <relationshipName>Strategic_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>